# eink_llss

./: .env.example  LICENSE  README.md  alembic.ini  database.sql  hlss_openapi.yaml  llss_openapi.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 001_add_hlss_admin.py  002_device_jwt_auth.py
app/: __init__.py  auth.py  database.py  db_models.py  dependencies.py  hlss_service.py  main.py  models.py  store.py
app/routers/: __init__.py  admin.py  debug.py  device_auth.py  devices.py  instances.py
docs/: admin-api.md
migrations/: 001_add_hlss_admin.sql  002_device_jwt_auth.sql
tests/: test_devices.py  test_instances.py
